# Old-FLTK-Widgets

./: README.md  fl_font_browser.cpp  fl_font_browser.h
fl_font_browser/: fl_font_browser.cpp
fl_font_browser/Debug/: test.ilk
fl_font_browser/src/: fl_font_browser.cpp  fl_font_browser.h  main.cpp
fl_lcd_widget/FLCD3-4Clock/: Fl_LCDWidget48.cpp  Fl_LCDWidget48.h  LCD4.layout  Makefile.win  fl_lcd_clock.cpp  fl_lcd_clock.h  lcd4.dev  main.cpp
fl_lcd_widget/FL_LCD_CLOCK/: Clock.dev  Makefile.win  Project1_private.rc  Project1_private.res  fl_lcd_clock4.cpp  fl_lcd_clock4.h  fl_lcdwidget4.cpp  fl_lcdwidget4.h  main.cpp
fl_lcd_widget/lcd4/: LCD4.layout  (+6 more)
fltk_editor/: 3D Floppy.xpm  Editor.cpp  Editor.fl  Editor.h  Editor.txt  Editor_private.h  Editor_private.rc  Fl_Split.cpp  Makefile  Makefile.in  Makefile.win  New_1.xpm  button.hidden.xpm  button.input.xpm  config.status  configure  configure.ac  copy of Editor.fl  editor.cbp  editor.depend  editor.dev  editor.layout  editor_private.res  fileclose.xpm  fltk_editor.kateproject  zip.xpm
systemdirectorybrowser/: Makefile  explore111  explorer.kateproject  fl_ext_tree_browser.cpp  fl_ext_tree_browser.h  fl_ext_tree_item.cpp  fl_ext_tree_item.h  fl_systemdirectory_browser.cpp  fl_systemdirectory_browser.h  fl_systemdirectory_icons.h  flstring.h  main.cpp
toolbar/: Fl_Button_Cell.H  Fl_Button_Cell.cxx  Fl_ToolBar.H  Fl_ToolBar.cxx  Fl_ToolBar_Button.H  Fl_ToolBar_Button.cxx  Makefile  Makefile.win  Toolbar_private.aps  Toolbar_private.h  Toolbar_private.rc  main.cxx  toolbar  toolbar.cbp  toolbar.dev  toolbar.layout
(+24 files in other folders)
